--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="back_to_register">Back to Register</string>
     <string name="login">login</string>
     <string name="select_photo">Select Photo</string>
+    <string name="user_unknown">Unknown</string>
 </resources>
